Use List for Settings, and fix alignments, etc.

--- a/src/settings/Settings.scss
+++ b/src/settings/Settings.scss
@@ -37,3 +37,7 @@ with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
 @include set-breakpoint-gap(breakpoints.$md-breakpoint, breakpoints.$md-gap);
 @include set-breakpoint-gap(breakpoints.$lg-breakpoint, breakpoints.$lg-gap);
 @include set-breakpoint-gap(breakpoints.$xl-breakpoint, breakpoints.$xl-gap);
+
+.SettingsListItem {
+  display: flex;
+}
